--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenneth Thakur</title>
-    <!-- Importing Lato Font from Google Fonts -->
+    <!-- Importing Lato Font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
         body {
             font-family: 'Lato', sans-serif;
-            font-size: 10pt; /* Slightly smaller for compactness */
+            font-size: 10.5pt; /* Base font size */
             color: #333;
             background-color: #fff;
             line-height: 1.4;
@@ -19,8 +19,8 @@
         }
 
         .container {
-            max-width: 800px; /* Slightly narrower like academic pages */
-            margin: 40px auto; /* Reduced top margin */
+            max-width: 800px;
+            margin: 30px auto;
             padding: 0 20px;
         }
 
@@ -29,24 +29,24 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 30px; /* Reduced from 50px */
+            margin-bottom: 25px;
         }
 
         .bio-text {
             flex: 1;
-            padding-right: 30px;
+            padding-right: 40px;
         }
 
         .bio-text h1 {
-            font-size: 26px; /* Larger name header */
+            font-size: 26px;
             font-weight: 400; 
-            margin: 0 0 10px 0;
+            margin: 0 0 8px 0;
             color: #000;
         }
 
-        /* Hyperlink Styles */
+        /* Hyperlinks */
         a {
-            color: #1a73e8; /* Research blue */
+            color: #1a73e8; 
             text-decoration: none; 
         }
 
@@ -55,28 +55,46 @@
         }
 
         .social-links {
-            margin-top: 10px;
+            margin-top: 8px;
         }
 
-        /* Section Headers */
+        /* Clickable Profile Picture */
+        .profile-link {
+            transition: opacity 0.2s;
+            flex-shrink: 0;
+        }
+        
+        .profile-link:hover {
+            opacity: 0.8;
+        }
+
+        .profile-img {
+            width: 160px;
+            height: 160px;
+            border-radius: 50%;
+            object-fit: cover;
+            display: block;
+        }
+
+        /* Sections */
         h2 {
-            font-size: 1.5em;
-            margin-top: 40px;
-            margin-bottom: 20px;
+            font-size: 1.4em;
+            margin-top: 30px;
+            margin-bottom: 15px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 8px;
+            padding-bottom: 5px;
             font-weight: 400;
         }
 
         .project-entry {
             display: flex;
-            margin-bottom: 30px; /* Significantly reduced for compactness */
+            margin-bottom: 25px;
             align-items: flex-start;
         }
 
         .project-img, .placeholder-box {
-            width: 200px; /* Reduced from 240px */
-            height: 120px;
+            width: 180px; 
+            height: 110px;
             margin-right: 25px;
             border-radius: 2px;
             flex-shrink: 0;
@@ -84,7 +102,6 @@
             border: 1px solid #f0f0f0;
         }
 
-        /* Placeholder style */
         .placeholder-box {
             background: #fafafa;
             display: flex;
@@ -98,11 +115,11 @@
             margin: 0;
             font-size: 1.1em;
             font-weight: 700;
-            color: #1a73e8; /* Titles are now blue links like Rahul's */
+            color: #1a73e8; 
         }
 
         .project-info p {
-            margin: 2px 0; /* Tightened line spacing */
+            margin: 1px 0;
         }
 
         .project-category {
@@ -114,19 +131,23 @@
 
         .project-links {
             font-size: 0.95em;
-            margin: 4px 0 !important;
+            margin: 3px 0 !important;
         }
 
+        /* Project Description: Set to Lato 10.5pt */
         .project-description {
-            margin-top: 6px !important;
+            margin-top: 5px !important;
             color: #444;
-            font-size: 0.95em;
-            line-height: 1.4;
+            font-family: 'Lato', sans-serif;
+            font-size: 10.5pt; 
+            max-width: 550px;
+            line-height: 1.5;
         }
 
         @media (max-width: 650px) {
             header, .project-entry { flex-direction: column; }
-            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
+            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 10px; }
+            .profile-img { margin-top: 20px; }
         }
     </style>
 </head>
@@ -149,7 +170,10 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <img src="profile.jpg" alt="Kenneth Thakur" style="width: 160px; height: 160px; border-radius: 50%; object-fit: cover;">
+            <!-- Clickable Profile Picture -->
+            <a href="profile.jpg" target="_blank" class="profile-link">
+                <img src="profile.jpg" alt="Kenneth Thakur" class="profile-img">
+            </a>
         </header>
 
         <!-- Technical Projects -->
@@ -161,7 +185,7 @@
                 <img src="sentinel_ds_hero.png" alt="Sentinel Monitor" class="project-img">
                 <div class="project-info">
                     <a href="#"><h3>Sentinel: Geopolitical Conflict Monitor</h3></a>
-                    <p>Kenneth Thakur</p>
+                    <p><strong>Kenneth Thakur</strong></p>
                     <p class="project-category">Open Source Intelligence (OSINT) · 2026</p>
                     <div class="project-links">
                         <a href="#">project page</a> / <a href="#">code</a>
@@ -177,13 +201,13 @@
                 <div class="placeholder-box"> [Aegis Distribution Plot] </div>
                 <div class="project-info">
                     <a href="#"><h3>Aegis: Public Expenditure Anomaly Detector</h3></a>
-                    <p>Kenneth Thakur</p>
+                    <p><strong>Kenneth Thakur</strong></p>
                     <p class="project-category" style="color: #c09000;">Forensic Data Science · 2026</p>
                     <div class="project-links">
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated auditing engine designed to detect financial fraud in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
+                        An automated auditing engine designed to detect financial fraud and waste in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
                     </p>
                 </div>
             </div>
@@ -193,13 +217,13 @@
                 <div class="placeholder-box"> [Citadel Network Graph] </div>
                 <div class="project-info">
                     <a href="#"><h3>Citadel: Critical Infrastructure Vulnerability Scanner</h3></a>
-                    <p>Kenneth Thakur</p>
+                    <p><strong>Kenneth Thakur</strong></p>
                     <p class="project-category" style="color: #28a745;">Cybersecurity & Digital Defense · 2026</p>
                     <div class="project-links">
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated vulnerability assessment tool for industrial network perimeters. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation for mission-critical infrastructure.
+                        Automated vulnerability assessment for industrial networks. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation for mission-critical servers and IoT infrastructure.
                     </p>
                 </div>
             </div>
