--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenneth Thakur</title>
-    <!-- Importing Lato Font including weight 900 (Black) -->
+    <!-- Lato Font including Black weight (900) -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
@@ -37,7 +37,7 @@
             padding-right: 40px;
         }
 
-        /* Kenneth Thakur Name: Lato Black (900), Size 24 */
+        /* Name: Lato Black, Size 24 */
         .bio-text h1 {
             font-family: 'Lato', sans-serif;
             font-size: 24px;
@@ -48,12 +48,12 @@
 
         /* Hyperlink Styles */
         a {
-            color: #1a73e8; /* Research blue */
+            color: #1a73e8; 
             text-decoration: none; 
             transition: color 0.2s ease-in-out;
         }
 
-        /* Hover effect: No underline, turns orange */
+        /* Hover Effect: No underline, turns orange */
         a:hover {
             color: #ff9d00; 
             text-decoration: none;
@@ -81,7 +81,7 @@
             display: block;
         }
 
-        /* Technical Projects Section */
+        /* Technical Projects Section Header */
         h2 {
             font-size: 1.4em;
             margin-top: 30px;
@@ -116,7 +116,7 @@
             color: #aaa;
         }
 
-        /* Project Headers: Black, No Hyperlink */
+        /* Project Titles: Static Black, No Link */
         .project-info h3 {
             margin: 0;
             font-size: 1.1em;
@@ -141,7 +141,7 @@
             margin: 3px 0 !important;
         }
 
-        /* Project Description: Lato Black (900) 10.5pt */
+        /* Project Description: Lato Black 10.5pt */
         .project-description {
             margin-top: 5px !important;
             color: #333;
@@ -220,7 +220,7 @@
                 </div>
             </div>
 
-            <!-- Citadel -->
+            <!-- Citadel (Updated Style) -->
             <div class="project-entry">
                 <div class="placeholder-box"> [Citadel Network Graph] </div>
                 <div class="project-info">
@@ -231,7 +231,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        Automated vulnerability assessment for industrial networks. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation for mission-critical servers and IoT infrastructure.
+                        An automated vulnerability assessment engine designed to identify security flaws within industrial network perimeters. Interfaces with the Shodan and NIST NVD APIs to prioritize risk remediation for mission-critical servers.
                     </p>
                 </div>
             </div>
