--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenneth Thakur</title>
-    <!-- Lato Font including Black weight (900) -->
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <!-- Lato Font including regular and light weights -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
         body {
@@ -37,11 +37,11 @@
             padding-right: 40px;
         }
 
-        /* Name: Lato Black, Size 24 */
+        /* Name: Lato Regular (Unbolded), Size 24 */
         .bio-text h1 {
             font-family: 'Lato', sans-serif;
             font-size: 24px;
-            font-weight: 900; 
+            font-weight: 400; 
             margin: 0 0 8px 0;
             color: #000;
         }
@@ -63,14 +63,10 @@
             margin-top: 8px;
         }
 
-        /* Clickable Profile Picture */
+        /* Profile Picture: Clickable but NO hover effect/glow */
         .profile-link {
-            transition: opacity 0.2s;
             flex-shrink: 0;
-        }
-        
-        .profile-link:hover {
-            opacity: 0.8;
+            cursor: pointer;
         }
 
         .profile-img {
@@ -141,12 +137,12 @@
             margin: 3px 0 !important;
         }
 
-        /* Project Description: Lato Black 10.5pt */
+        /* Project Description: Lato Regular (Unbolded) 10.5pt */
         .project-description {
             margin-top: 5px !important;
             color: #333;
             font-family: 'Lato', sans-serif;
-            font-weight: 900; 
+            font-weight: 400; 
             font-size: 10.5pt; 
             max-width: 560px;
             line-height: 1.4;
@@ -178,9 +174,9 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture -->
-            <a href="profile.jpg" target="_blank" class="profile-link">
-                <img src="profile.jpg" alt="Kenneth Thakur" class="profile-img">
+            <!-- Clickable Profile Picture with new filename -->
+            <a href="linkedin_headshot" target="_blank" class="profile-link">
+                <img src="linkedin_headshot" alt="Kenneth Thakur" class="profile-img">
             </a>
         </header>
 
@@ -220,7 +216,7 @@
                 </div>
             </div>
 
-            <!-- Citadel (Updated Style) -->
+            <!-- Citadel -->
             <div class="project-entry">
                 <div class="placeholder-box"> [Citadel Network Graph] </div>
                 <div class="project-info">
