--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenneth Thakur</title>
-    <!-- Lato Font including regular and light weights -->
+    <!-- Lato Font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
@@ -63,10 +63,10 @@
             margin-top: 8px;
         }
 
-        /* Profile Picture: Clickable but NO hover effect/glow */
+        /* Profile Picture: No hover effect/glow */
         .profile-link {
             flex-shrink: 0;
-            cursor: pointer;
+            text-decoration: none;
         }
 
         .profile-img {
@@ -174,9 +174,9 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture with new filename -->
-            <a href="linkedin_headshot" target="_blank" class="profile-link">
-                <img src="linkedin_headshot" alt="Kenneth Thakur" class="profile-img">
+            <!-- Clickable Profile Picture -->
+            <a href="linkedin_headshot.jpg" target="_blank" class="profile-link">
+                <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
         </header>
 
