--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenneth Thakur</title>
-    <!-- Lato Font -->
+    <!-- Lato Font from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
@@ -46,14 +46,13 @@
             color: #000;
         }
 
-        /* Hyperlink Styles */
+        /* Hyperlink Styles: Blue, turns orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
             transition: color 0.2s ease-in-out;
         }
 
-        /* Hover Effect: No underline, turns orange */
         a:hover {
             color: #ff9d00; 
             text-decoration: none;
@@ -63,7 +62,7 @@
             margin-top: 8px;
         }
 
-        /* Profile Picture: No hover effect/glow */
+        /* Profile Picture: Clickable, NO hover effect/glow */
         .profile-link {
             flex-shrink: 0;
             text-decoration: none;
