--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             padding: 0 20px;
         }
 
-        /* Header Section - Matches Rahul's layout density */
+        /* Header Section */
         header {
             display: flex;
             align-items: center;
@@ -46,7 +46,7 @@
             color: #000;
         }
 
-        /* Hyperlink Styles: Blue, turns orange on hover, no underline */
+        /* Hyperlink Styles: turns orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -164,8 +164,9 @@
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
+                <!-- 36-word bio with University Hyperlink -->
                 <p>
-                    I am a BSc Student in Information Technology Management at University of Auckland. Invited to the Science Scholars (Top 5%) for academic excellence. My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
+                    I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars (Top 5%) for academic excellence. My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
                 </p>
                 <div class="social-links">
                     <a href="mailto:ktha335@aucklanduni.ac.nz">Email</a> /
