--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.5;
+            line-height: 1.4; /* Slightly tighter leading */
             margin: 0;
             padding: 0;
         }
 
         .container {
             max-width: 800px;
-            margin: 40px auto;
+            margin: 15px auto; /* Reduced from 40px to pull content up */
             padding: 0 20px;
         }
 
@@ -29,12 +29,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 40px;
+            margin-bottom: 15px; /* Significantly reduced margin */
         }
 
         .bio-text {
             flex: 1;
-            padding-right: 40px;
+            padding-right: 30px;
         }
 
         /* Name Header: Lato 24pt, Unbolded */
@@ -42,15 +42,15 @@
             font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 15px 0;
+            margin: 0 0 5px 0; /* Tightened gap under name */
             color: #000;
         }
 
-        /* Hyperlink Styles: turns orange on hover, no underline */
+        /* Hyperlink Styles */
         a {
             color: #1a73e8; 
             text-decoration: none; 
-            transition: color 0.2s ease-in-out;
+            transition: color 0.1s ease-in-out;
         }
 
         a:hover {
@@ -59,46 +59,43 @@
         }
 
         .social-links {
-            margin-top: 12px;
+            margin-top: 5px; /* Tightened */
         }
 
-        /* Profile Picture: Sized to match Rahul Ravishankar's (~180px) */
-        .profile-link {
-            flex-shrink: 0;
-            text-decoration: none;
-        }
-
+        /* Profile Picture sized to match Rahul's (~160px for compactness) */
         .profile-img {
-            width: 180px;
-            height: 180px;
+            width: 160px;
+            height: 160px;
             border-radius: 50%;
             object-fit: cover;
             display: block;
             border: 1px solid #f0f0f0;
+            flex-shrink: 0;
         }
 
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
             font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
-            margin-top: 40px;
-            margin-bottom: 20px;
+            margin-top: 20px; /* Reduced to fit more on screen */
+            margin-bottom: 10px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 8px;
+            padding-bottom: 5px;
             font-weight: 400;
             color: #000;
         }
 
         .project-entry {
             display: flex;
-            margin-bottom: 30px;
+            margin-bottom: 12px; /* Tight vertical gap between projects */
             align-items: flex-start;
         }
 
+        /* Smaller project thumbnails to save vertical space */
         .project-img, .placeholder-box {
-            width: 200px; 
-            height: 120px;
-            margin-right: 30px;
+            width: 170px; 
+            height: 100px;
+            margin-right: 25px;
             border-radius: 2px;
             flex-shrink: 0;
             object-fit: cover;
@@ -110,50 +107,48 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 10px;
+            font-size: 9px;
             color: #aaa;
         }
 
-        /* Project Titles: Static Black, No Link */
         .project-info h3 {
             margin: 0;
-            font-size: 1.15em;
+            font-size: 1.1em;
             font-weight: 700;
             color: #000; 
             cursor: default;
         }
 
         .project-info p {
-            margin: 2px 0;
+            margin: 1px 0; /* Minimal line spacing */
         }
 
         .project-category {
             color: #d93025; 
             font-style: italic;
             font-weight: 700;
-            font-size: 0.95em;
+            font-size: 0.9em;
         }
 
         .project-links {
-            font-size: 0.95em;
-            margin: 5px 0 !important;
+            font-size: 0.9em;
+            margin: 2px 0 !important;
         }
 
         /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 8px !important;
+            margin-top: 3px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 560px;
-            line-height: 1.5;
+            max-width: 580px;
+            line-height: 1.35;
         }
 
         @media (max-width: 650px) {
             header, .project-entry { flex-direction: column; }
-            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
-            .profile-img { width: 150px; height: 150px; margin-top: 25px; } 
+            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 10px; }
         }
     </style>
 </head>
@@ -164,7 +159,6 @@
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
-                <!-- 36-word bio with University Hyperlink -->
                 <p>
                     I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars (Top 5%) for academic excellence. My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
                 </p>
@@ -174,7 +168,6 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture matching Rahul's sizing -->
             <a href="linkedin_headshot.jpg" target="_blank" class="profile-link">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
@@ -195,7 +188,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds and reconstruct fragmented headlines into formal tactical SITREPs.
+                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
                     </p>
                 </div>
             </div>
@@ -211,7 +204,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated auditing engine designed to detect financial fraud and waste in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
+                        An automated auditing engine designed to detect financial fraud in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
                     </p>
                 </div>
             </div>
@@ -227,7 +220,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated vulnerability assessment engine designed to identify security flaws within industrial network perimeters. Interfaces with the Shodan and NIST NVD APIs to prioritize risk remediation.
+                        An automated vulnerability assessment engine for industrial network perimeters. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation.
                     </p>
                 </div>
             </div>
