--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.4; /* Slightly tighter leading */
+            line-height: 1.5; /* Restored standard line height */
             margin: 0;
             padding: 0;
         }
 
         .container {
-            max-width: 800px;
-            margin: 15px auto; /* Reduced from 40px to pull content up */
+            max-width: 850px;
+            margin: 60px auto; /* Restored breathing room at top/bottom */
             padding: 0 20px;
         }
 
@@ -29,12 +29,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 15px; /* Significantly reduced margin */
+            margin-bottom: 50px; /* Restored space before projects */
         }
 
         .bio-text {
             flex: 1;
-            padding-right: 30px;
+            padding-right: 40px;
         }
 
         /* Name Header: Lato 24pt, Unbolded */
@@ -42,15 +42,15 @@
             font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 5px 0; /* Tightened gap under name */
+            margin: 0 0 15px 0;
             color: #000;
         }
 
-        /* Hyperlink Styles */
+        /* Hyperlink Styles: Blue, turns orange on hover, no underline */
         a {
             color: #1a73e8; 
             text-decoration: none; 
-            transition: color 0.1s ease-in-out;
+            transition: color 0.2s ease-in-out;
         }
 
         a:hover {
@@ -59,43 +59,47 @@
         }
 
         .social-links {
-            margin-top: 5px; /* Tightened */
+            margin-top: 15px;
         }
 
-        /* Profile Picture sized to match Rahul's (~160px for compactness) */
+        /* Profile Picture: Sized to match Rahul's exactly (~180px) */
+        .profile-link {
+            flex-shrink: 0;
+            text-decoration: none;
+        }
+
         .profile-img {
-            width: 160px;
-            height: 160px;
+            width: 180px;
+            height: 180px;
             border-radius: 50%;
             object-fit: cover;
             display: block;
             border: 1px solid #f0f0f0;
-            flex-shrink: 0;
         }
 
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
             font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
-            margin-top: 20px; /* Reduced to fit more on screen */
-            margin-bottom: 10px;
+            margin-top: 50px; /* Restored section spacing */
+            margin-bottom: 30px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 5px;
+            padding-bottom: 10px;
             font-weight: 400;
             color: #000;
         }
 
         .project-entry {
             display: flex;
-            margin-bottom: 12px; /* Tight vertical gap between projects */
+            margin-bottom: 45px; /* Restored gap between project entries */
             align-items: flex-start;
         }
 
-        /* Smaller project thumbnails to save vertical space */
+        /* Standardized project thumbnails for a balanced look */
         .project-img, .placeholder-box {
-            width: 170px; 
-            height: 100px;
-            margin-right: 25px;
+            width: 240px; 
+            height: 140px;
+            margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
             object-fit: cover;
@@ -107,48 +111,50 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 9px;
+            font-size: 11px;
             color: #aaa;
         }
 
+        /* Project Titles: Static Black, No Link */
         .project-info h3 {
             margin: 0;
-            font-size: 1.1em;
+            font-size: 1.25em;
             font-weight: 700;
             color: #000; 
             cursor: default;
         }
 
         .project-info p {
-            margin: 1px 0; /* Minimal line spacing */
+            margin: 4px 0;
         }
 
         .project-category {
             color: #d93025; 
             font-style: italic;
             font-weight: 700;
-            font-size: 0.9em;
+            font-size: 0.95em;
         }
 
         .project-links {
-            font-size: 0.9em;
-            margin: 2px 0 !important;
+            font-size: 1.05em;
+            margin: 8px 0 !important;
         }
 
         /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 3px !important;
+            margin-top: 10px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 580px;
-            line-height: 1.35;
+            max-width: 550px;
+            line-height: 1.5;
         }
 
-        @media (max-width: 650px) {
+        @media (max-width: 750px) {
             header, .project-entry { flex-direction: column; }
-            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 10px; }
+            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 20px; }
+            .profile-img { margin-top: 30px; }
         }
     </style>
 </head>
@@ -168,6 +174,7 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
+            <!-- Clickable Profile Picture sized to match Rahul's (~180px) -->
             <a href="linkedin_headshot.jpg" target="_blank" class="profile-link">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
@@ -188,7 +195,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
+                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds and reconstruct fragmented headlines into formal tactical SITREPs.
                     </p>
                 </div>
             </div>
@@ -204,7 +211,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated auditing engine designed to detect financial fraud in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
+                        An automated auditing engine designed to detect financial fraud and waste in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
                     </p>
                 </div>
             </div>
@@ -220,7 +227,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated vulnerability assessment engine for industrial network perimeters. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation.
+                        An automated vulnerability assessment engine designed to identify security flaws within industrial network perimeters. Interfaces with the Shodan and NIST NVD APIs to prioritize risk remediation for mission-critical servers.
                     </p>
                 </div>
             </div>
