--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.45;
+            line-height: 1.4;
             margin: 0;
             padding: 0;
-            overflow-x: hidden; /* Prevent horizontal scroll */
+            overflow: hidden; /* Removes scrollbar */
         }
 
         .container {
-            max-width: 820px;
-            margin: 2vh auto; /* Responsive top/bottom margin to help fit screens */
+            max-width: 850px;
+            margin: 1vh auto; /* Minimal margin to stay on one screen */
             padding: 0 20px;
         }
 
@@ -30,7 +30,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 20px; /* Tightened gap */
+            margin-bottom: 12px;
         }
 
         .bio-text {
@@ -40,10 +40,9 @@
 
         /* Name Header: Lato 24pt, Unbolded */
         .bio-text h1 {
-            font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 10px 0;
+            margin: 0 0 5px 0;
             color: #000;
         }
 
@@ -51,7 +50,7 @@
         a {
             color: #1a73e8; 
             text-decoration: none; 
-            transition: color 0.2s ease-in-out;
+            transition: color 0.1s ease-in-out;
         }
 
         a:hover {
@@ -60,51 +59,47 @@
         }
 
         .social-links {
-            margin-top: 10px;
+            margin-top: 5px;
         }
 
-        /* Profile Picture: Optimized to 170px to save vertical room while keeping Rahul's look */
-        .profile-link {
-            flex-shrink: 0;
-            text-decoration: none;
-        }
-
+        /* Profile Picture sized to match Rahul's (180px) */
         .profile-img {
-            width: 170px;
-            height: 170px;
+            width: 180px;
+            height: 180px;
             border-radius: 50%;
             object-fit: cover;
             display: block;
             border: 1px solid #f0f0f0;
+            flex-shrink: 0;
         }
 
         /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
-            font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
-            margin-top: 25px; /* Reduced to pull content up */
-            margin-bottom: 15px;
+            margin-top: 15px;
+            margin-bottom: 8px;
             border-bottom: 1px solid #eee;
-            padding-bottom: 6px;
+            padding-bottom: 4px;
             font-weight: 400;
             color: #000;
         }
 
         .project-entry {
             display: flex;
-            margin-bottom: 18px; /* Optimized gap to fit 3 projects */
+            margin-bottom: 10px;
             align-items: flex-start;
         }
 
-        /* Balanced project thumbnails */
+        /* Larger project thumbnails without cut-off */
         .project-img, .placeholder-box {
-            width: 200px; 
-            height: 115px;
+            width: 250px; /* Increased width */
+            height: 145px; /* Increased height */
             margin-right: 30px;
             border-radius: 2px;
             flex-shrink: 0;
-            object-fit: cover;
-            border: 1px solid #f0f0f0;
+            object-fit: contain; /* Prevents chart headers from being cut off */
+            background-color: #000; /* Matches the Sentinel background */
+            border: 1px solid #eee;
         }
 
         .placeholder-box {
@@ -112,50 +107,49 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 10px;
+            font-size: 9px;
             color: #aaa;
         }
 
-        /* Project Titles: Static Black, No Link */
         .project-info h3 {
             margin: 0;
-            font-size: 1.15em;
+            font-size: 1.1em;
             font-weight: 700;
             color: #000; 
             cursor: default;
         }
 
         .project-info p {
-            margin: 2px 0;
+            margin: 1px 0;
         }
 
         .project-category {
             color: #d93025; 
             font-style: italic;
             font-weight: 700;
-            font-size: 0.95em;
+            font-size: 0.9em;
         }
 
         .project-links {
-            font-size: 0.95em;
-            margin: 4px 0 !important;
+            font-size: 0.9em;
+            margin: 2px 0 !important;
         }
 
         /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 5px !important;
+            margin-top: 3px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 520px;
-            line-height: 1.4;
+            max-width: 540px;
+            line-height: 1.35;
         }
 
         @media (max-width: 750px) {
+            body { overflow: auto; }
             header, .project-entry { flex-direction: column; }
-            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
-            .profile-img { width: 150px; height: 150px; margin-top: 20px; } 
+            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 10px; }
         }
     </style>
 </head>
@@ -166,7 +160,7 @@
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
-                <!-- Exactly 36 words -->
+                <!-- Bio exactly 36 words with University hyperlink -->
                 <p>
                     I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars (Top 5%) for academic excellence. My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
                 </p>
@@ -176,8 +170,7 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture -->
-            <a href="linkedin_headshot.jpg" target="_blank" class="profile-link">
+            <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
         </header>
@@ -197,7 +190,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds and reconstruct fragmented headlines into formal tactical SITREPs.
+                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
                     </p>
                 </div>
             </div>
@@ -213,7 +206,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated auditing engine designed to detect financial fraud and waste in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
+                        An automated auditing engine designed to detect financial fraud in public records. Applies Benford's Law and machine learning outlier detection.
                     </p>
                 </div>
             </div>
@@ -229,7 +222,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated vulnerability assessment engine designed to identify security flaws within industrial network perimeters. Interfaces with the Shodan and NIST NVD APIs to prioritize risk remediation.
+                        An automated vulnerability assessment engine for industrial networks. Interfaces with Shodan and NIST NVD APIs to prioritize risk remediation.
                     </p>
                 </div>
             </div>
